# Insights-Forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.md.txt  halat.md  render.yaml  sample.csv  sample_sales_dataset_100_rows.csv
backend/backend/: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  START_HERE.md  alembic.ini  audit_log.json  check_db.py  create_verified_user.py  db_speed_test.py  diag_locks.py  docker-compose.yml  e2e_test.py  implementation_plan.md  pyproject.toml  requirements.txt  ruff_errors.txt  seed_dataset.py  seed_market_org.py  test_api_endpoints.py  test_token.txt  walkthrough.md
backend/backend/alembic/: env.py
backend/backend/alembic/versions/: 0d8b82577371_create_user_sessions_table.py  1235316d9aa7_create_system_module.py  1dc325701d31_create_ai_module.py  21cb47cf6a8b_add_sector_column_to_workspaces.py  39809deec920_create_permissions_table.py  4ab05ae851a0_create_forecasting_module.py  56611151632f_phase3_records_thresholds_decision_card_.py  66b882926fe5_phase4_email_tokens_table.py  6a3e29e2dc44_create_dashboard_module.py  71f4d40f1434_create_notifications_module.py  7e58fb7f8fb3_create_users_table.py  8cb83dba9001_add_memory_columns_to_ai_conversations.py  9ffc675c09d0_create_analytics_module.py  a32f4c29c3e6_create_reporting_module.py  bb32bbfc013a_create_vector_chunks_table.py  c5767b9abbdc_create_roles_table.py  ce7c6d9107fe_create_dataset_module.py  d54fbaf32f17_create_organizations_table.py  (+2 more)
backend/backend/app/: main.py
backend/backend/scripts/: verify_all_users.py
backend/backend/tests/: e2e_gemini_test.py
(+574 files in other folders)
